Fix HTML encoding issues in sobre.html

--- a/sobre.html
+++ b/sobre.html
@@ -102,7 +102,7 @@
                 </div>
 
                 <div style="width: fit-content;">
-                    <p class="typing line4">_ STATUS: CODANDO...</p>
+                    <p class="typing line4">_ STATUS: CARREGANDO...</p>
                 </div>
 
                 <div class="skills-tags line5" style="opacity: 0; animation: fadeIn 1s 7s forwards; display: flex; gap: 10px;">
@@ -128,3 +128,4 @@
     </style>
 </body>
 </html>
+
